feat: Add RFQ management section to admin panel dashboard

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Backend API Configuration
-VITE_API_URL=https://backendmatrix.onrender.com/api
+VITE_API_URL=http://localhost:5000/api
 
 # Environment
-VITE_APP_ENV=production
+VITE_APP_ENV=development
